crates/ty_python_types/resources/mdtest/snapshots/deprecated.md_-_Tests_for_the_`@depr…_-_Introduction_(cff2724f4c9d28c4).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: deprecated.md - Tests for the `@deprecated` decorator - Introduction
mdtest path: crates/ty_python_types/resources/mdtest/deprecated.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import deprecated
 2 | 
 3 | @deprecated("use OtherClass")
 4 | def myfunc(x: int): ...
 5 | 
 6 | myfunc(1)  # error: [deprecated] "use OtherClass"
 7 | from typing_extensions import deprecated
 8 | 
 9 | @deprecated("use BetterClass")
10 | class MyClass: ...
11 | 
12 | MyClass()  # error: [deprecated] "use BetterClass"
13 | from typing_extensions import deprecated
14 | 
15 | class MyClass:
16 |     @deprecated("use something else")
17 |     def afunc(): ...
18 |     @deprecated("don't use this!")
19 |     def amethod(self): ...
20 | 
21 | MyClass.afunc()  # error: [deprecated] "use something else"
22 | MyClass().amethod()  # error: [deprecated] "don't use this!"
```

# Diagnostics

```
warning[deprecated]: The function `myfunc` is deprecated
 --> src/mdtest_snippet.py:6:1
  |
4 | def myfunc(x: int): ...
5 |
6 | myfunc(1)  # error: [deprecated] "use OtherClass"
  | ^^^^^^ use OtherClass
7 | from typing_extensions import deprecated
  |
info: rule `deprecated` is enabled by default

```

```
warning[deprecated]: The class `MyClass` is deprecated
  --> src/mdtest_snippet.py:12:1
   |
10 | class MyClass: ...
11 |
12 | MyClass()  # error: [deprecated] "use BetterClass"
   | ^^^^^^^ use BetterClass
13 | from typing_extensions import deprecated
   |
info: rule `deprecated` is enabled by default

```

```
warning[deprecated]: The function `afunc` is deprecated
  --> src/mdtest_snippet.py:21:9
   |
19 |     def amethod(self): ...
20 |
21 | MyClass.afunc()  # error: [deprecated] "use something else"
   |         ^^^^^ use something else
22 | MyClass().amethod()  # error: [deprecated] "don't use this!"
   |
info: rule `deprecated` is enabled by default

```

```
warning[deprecated]: The function `amethod` is deprecated
  --> src/mdtest_snippet.py:22:11
   |
21 | MyClass.afunc()  # error: [deprecated] "use something else"
22 | MyClass().amethod()  # error: [deprecated] "don't use this!"
   |           ^^^^^^^ don't use this!
   |
info: rule `deprecated` is enabled by default

```
